--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "axios": "^1.7.7",
     "pinia": "^2.2.6",
     "vue": "^3.5.12",
-    "vue-router": "^4.4.5"
+    "vue-router": "^4.4.5",
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@types/node": "^22.8.4",
+    "@vitejs/plugin-vue": "^5.1.4",
     "autoprefixer": "^10.4.20",
     "daisyui": "^4.12.10",
     "postcss": "^8.4.47",
@@ -23,7 +25,6 @@
     "tailwindcss-rtl": "^0.9.0",
     "typescript": "^5.6.3",
     "vite": "^5.4.10",
-    "vite-plugin-vue-devtools": "^7.5.4",
-    "@vitejs/plugin-vue": "^5.1.4"
+    "vite-plugin-vue-devtools": "^7.5.4"
   }
 }
