--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "serve": "vue-cli-service serve"
   },
   "dependencies": {
+    "@alireza-ab/vue3-persian-datepicker": "^1.0.6",
     "axios": "^1.7.7",
     "pinia": "^2.2.6",
     "vue": "^3.5.12",
